--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             </div>
         </div>
         <div class="nav-fonts flex">
+            <button class="dark-mode-btn">
+                <i class="fa-solid fa-moon"></i>
+            </button>
             <i class="fa-brands fa-tiktok mx-2"></i>
             <i class="fa-brands fa-youtube  mx-2"></i>
             <i class="fa-brands fa-instagram  mx-2 "></i>
@@ -98,10 +101,10 @@
                 </p>
             </div>
             <div class="col">
-                <img src="./5.png" alt="">
+                <img src="./5.png" alt="" style="border-radius: 25px;">
             </div>
             <div class="col">
-                <img src="./6.png" alt="">
+                <img src="./6.png" alt="" style="border-radius: 25px;">
             </div>
         </div>
     </div>
@@ -110,6 +113,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+        <script src="main.js"></script>
 </body>
 
 </html>
